Fixed spacing issue caused by ems

--- a/sass/sections/_main.scss
+++ b/sass/sections/_main.scss
@@ -187,7 +187,7 @@
 		font-weight: $font-weight-bold;
 		margin-left: 0.75em;
 		position: relative;
-		top: 0.0625em;
+		top: 0.0625rem;
 	}
 }
 
